Details
-
Bug
-
Status: Closed
-
Critical
-
Resolution: Fixed
-
0.9.2
-
None
-
Important
Description
ThreadManager::Impl::removeWorker is not joining worker properly.
It possible that the not joined worker will continue to reference destructed ThreadManager's non-static members causing crash.
It is caused by removeWorker() implementation which waits for workers to decrement the ThreadManager's workerCount_. Once value is decremented removeWorker() assumes the worker thread joined, while in fact the worker thread continues to execute some more code which adds the worker thread to destruction list which list may be just freed due to ThreadManager object destruction.
Attachments
Attachments
Issue Links
- relates to
-
THRIFT-3932 C++ ThreadManager has a rare termination race
-
- Closed
-
- links to