THRIFT-3233 fix accounting of workers in thread manager Client: C++ Patch: Jim King <jim.king@simplivity.com>

This closes #992